@@ -579,7 +579,7 @@ class TestWorkingTree(TestCaseWithWorkingTree):
         # FIXME: This doesn't really test that it works; also this is not
         # implementation-independent. mbp 20070226
         tree = self.make_branch_and_tree('master')
-        tree._control_files.put('merge-hashes', StringIO('asdfasdf'))
+        tree._transport.put_bytes('merge-hashes', 'asdfasdf')
         self.assertRaises(errors.MergeModifiedFormatError, tree.merge_modified)
 
     def test_merge_modified(self):
@@ -608,11 +608,11 @@ class TestWorkingTree(TestCaseWithWorkingTree):
             
         tree2 = WorkingTree.open('master')
         self.assertEqual(tree2.conflicts(), example_conflicts)
-        tree2._control_files.put('conflicts', StringIO(''))
-        self.assertRaises(errors.ConflictFormatError, 
+        tree2._transport.put_bytes('conflicts', '')
+        self.assertRaises(errors.ConflictFormatError,
                           tree2.conflicts)
-        tree2._control_files.put('conflicts', StringIO('a'))
-        self.assertRaises(errors.ConflictFormatError, 
+        tree2._transport.put_bytes('conflicts', 'a')
+        self.assertRaises(errors.ConflictFormatError,
                           tree2.conflicts)
 
     def make_merge_conflicts(self):
